[tool.poetry]
name = "longformer-modal"
version = "0.1.0"
description = ""
authors = ["gabmarino-asimov <gabriele.marino@asimov.law>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
modal = "^0.62.221"
pymupdf = "^1.24.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
